# SoloRT

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ngc  Dockerfile.quant  Makefile  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml  records.md
benchmarks/: __init__.py  bench_serving.py
docs/: architecture.md  devlog.md
docs/zh/: README.md
docs/zh/01-快速上手/: README.md
docs/zh/02-系統架構/: README.md
docs/zh/03-快速路徑原理/: README.md
docs/zh/04-優化歷程/: README.md
docs/zh/05-效能與量化/: README.md
scripts/: chat.py  microbench_decode.py  prefetch_hf_models.py  probe_quant_gemm.py
src/solort/: __init__.py  cli.py
src/solort/api/: __init__.py  schemas.py  server.py  streaming.py
src/solort/backends/: __init__.py  attention_base.py  eager_backend.py  flashattn_backend.py  flashinfer_backend.py  transformers_flashinfer.py
src/solort/cache/: __init__.py  kv_cache.py  page_allocator.py  prefix_cache.py  vram_manager.py
src/solort/core/: __init__.py  batch.py  metrics.py  runtime.py  scheduler.py  sequence.py  session.py
src/solort/model/: __init__.py  cuda_graph_executor.py  executor.py  loader.py  sampler.py
tests/: fakes.py  test_api.py  test_api_schemas.py  test_cli.py  test_flashinfer_backend.py  test_kv_cache.py  test_page_allocator.py  test_prefix_cache.py  test_runtime.py  test_scheduler.py  test_serving_benchmark.py  test_transformers_decoding.py  test_transformers_flashinfer.py
