[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "solort"
version = "0.1.0"
description = "Single-user, single-GPU LLM inference runtime skeleton for consumer NVIDIA GPUs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "SoloRT contributors" },
]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6",
]
model = [
  "accelerate>=0.34",
  "torch>=2.5",
  "transformers>=4.51.0,<5",
]
flashinfer = [
  "flashinfer-python>=0.2",
]

[project.scripts]
solort-api = "solort.api.server:main"
solort-chat = "solort.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/solort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
